5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1752_1524.log
== TEST (2019-05-16 16:07:53) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=0

while(d<s):
	s=s-x*y
	d=d+1
print(s)
-- OUTPUT:
-5250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:20) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=0


while(d<s):
	s=s-(x/3)*(y/3)
	d=d+1
print(s)
-- OUTPUT:
-450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:30) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=0


while(d<s):
	s=s-(x/3)*(y/3)
	d=d+1
print(s)
-- OUTPUT:
-450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:46) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=0


while(d<s):
	s=s-(x/3)*(y/3)
	d=d+3
print(s)
-- OUTPUT:
-450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:02) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	s=s-(x/3)*(y/3)
	d=d*3
print(s)
-- OUTPUT:
-450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:31) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	d=d*3
print(s)
-- OUTPUT:
150
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:43) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	d=d*3
print(s)
-- OUTPUT:
150
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:52) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	d=d*3
print(d)
-- OUTPUT:
243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:09) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	s=f+u
	d=d*3
print(d)
-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:23) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	s=f-u
	d=d*3
print(d)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:37) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i
d=1


while(d<s):
	f=x/3
	u=y/3
	s=f-u
	d=d+3
print(d)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:30:14) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=3


while(d<s):
	p=x-y
	s=s-p
	d=d+1
print(d)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:44:43) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=3


while(d<s):
	p=x-y
	s=s -p
	d=d+1
print(d)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:50) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(s!=0):
	s=s-x*3-y*3
print(d)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:55) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(s!=0):
	s=s-x*3-y*3
print(s)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:12) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(s!=0):
	s=s-x*3-y*3
	d=d+1
print(d)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:44) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

o=0#acumular
d=0


while(s!=0):
	o=s-(x*3-y*3)
	p=p-s
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:05) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

o=0#acumular
d=0


while(s!=0):
	o=i-(x*3-y*3)
	p=p-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:52) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(s!=0):
	o=i-(x*3-y*3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:30) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(s!=0):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:54) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d>=0):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:59) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:07) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:08) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:12) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(s!=0):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:34) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:42) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:51:51) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- EXECUTION TIME:
0.20898
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
1
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:52) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	d=d+1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:27) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d>=s):
	o=i-(x/3)-(y/3)
	s=s-o
	print(s)
	d=d+1
print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:57) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<s):
	o=i-(x/3)-(y/3)
	s=s-o
	print(s)
	d=d+1
print(d)
-- OUTPUT:
50.0
-50.0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:14) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<i):
	o=i-(x/3)-(y/3)
	s=s-o
	print(s)
	d=d+1
print(d)
-- OUTPUT:
50.0
-50.0
-150.0
-250.0
-350.0
-450.0
-550.0
-650.0
-750.0
-850.0
-950.0
-1050.0
-1150.0
-1250.0
-1350.0
-1450.0
-1550.0
-1650.0
-1750.0
-1850.0
-1950.0
-2050.0
-2150.0
-2250.0
-2350.0
-2450.0
-2550.0
-2650.0
-2750.0
-2850.0
-2950.0
-3050.0
-3150.0
-3250.0
-3350.0
-3450.0
-3550.0
-3650.0
-3750.0
-3850.0
-3950.0
-4050.0
-4150.0
-4250.0
-4350.0
-4450.0
-4550.0
-4650.0
-4750.0
-4850.0
-4950.0
-5050.0
-5150.0
-5250.0
-5350.0
-5450.0
-5550.0
-5650.0
-5750.0
-5850.0
-5950.0
-6050.0
-6150.0
-6250.0
-6350.0
-6450.0
-6550.0
-6650.0
-6750.0
-6850.0
-6950.0
-7050.0
-7150.0
-7250.0
-7350.0
-7450.0
-7550.0
-7650.0
-7750.0
-7850.0
-7950.0
-8050.0
-8150.0
-8250.0
-8350.0
-8450.0
-8550.0
-8650.0
-8750.0
-8850.0
-8950.0
-9050.0
-9150.0
-9250.0
-9350.0
-9450.0
-9550.0
-9650.0
-9750.0
-9850.0
-9950.0
-10050.0
-10150.0
-10250.0
-10350.0
-10450.0
-10550.0
-10650.0
-10750.0
-10850.0
-10950.0
-11050.0
-11150.0
-11250.0
-11350.0
-11450.0
-11550.0
-11650.0
-11750.0
-11850.0
-11950.0
-12050.0
-12150.0
-12250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:27) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<i):
	o=i-(x/3)-(y/3)
	s=s-o
	print(s)
	d=d+1
print(d)
-- OUTPUT:
50.0
-50.0
-150.0
-250.0
-350.0
-450.0
-550.0
-650.0
-750.0
-850.0
-950.0
-1050.0
-1150.0
-1250.0
-1350.0
-1450.0
-1550.0
-1650.0
-1750.0
-1850.0
-1950.0
-2050.0
-2150.0
-2250.0
-2350.0
-2450.0
-2550.0
-2650.0
-2750.0
-2850.0
-2950.0
-3050.0
-3150.0
-3250.0
-3350.0
-3450.0
-3550.0
-3650.0
-3750.0
-3850.0
-3950.0
-4050.0
-4150.0
-4250.0
-4350.0
-4450.0
-4550.0
-4650.0
-4750.0
-4850.0
-4950.0
-5050.0
-5150.0
-5250.0
-5350.0
-5450.0
-5550.0
-5650.0
-5750.0
-5850.0
-5950.0
-6050.0
-6150.0
-6250.0
-6350.0
-6450.0
-6550.0
-6650.0
-6750.0
-6850.0
-6950.0
-7050.0
-7150.0
-7250.0
-7350.0
-7450.0
-7550.0
-7650.0
-7750.0
-7850.0
-7950.0
-8050.0
-8150.0
-8250.0
-8350.0
-8450.0
-8550.0
-8650.0
-8750.0
-8850.0
-8950.0
-9050.0
-9150.0
-9250.0
-9350.0
-9450.0
-9550.0
-9650.0
-9750.0
-9850.0
-9950.0
-10050.0
-10150.0
-10250.0
-10350.0
-10450.0
-10550.0
-10650.0
-10750.0
-10850.0
-10950.0
-11050.0
-11150.0
-11250.0
-11350.0
-11450.0
-11550.0
-11650.0
-11750.0
-11850.0
-11950.0
-12050.0
-12150.0
-12250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:25) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<i):
	p=s+x-y
print(d)
-- OUTPUT:
50.0
-50.0
-150.0
-250.0
-350.0
-450.0
-550.0
-650.0
-750.0
-850.0
-950.0
-1050.0
-1150.0
-1250.0
-1350.0
-1450.0
-1550.0
-1650.0
-1750.0
-1850.0
-1950.0
-2050.0
-2150.0
-2250.0
-2350.0
-2450.0
-2550.0
-2650.0
-2750.0
-2850.0
-2950.0
-3050.0
-3150.0
-3250.0
-3350.0
-3450.0
-3550.0
-3650.0
-3750.0
-3850.0
-3950.0
-4050.0
-4150.0
-4250.0
-4350.0
-4450.0
-4550.0
-4650.0
-4750.0
-4850.0
-4950.0
-5050.0
-5150.0
-5250.0
-5350.0
-5450.0
-5550.0
-5650.0
-5750.0
-5850.0
-5950.0
-6050.0
-6150.0
-6250.0
-6350.0
-6450.0
-6550.0
-6650.0
-6750.0
-6850.0
-6950.0
-7050.0
-7150.0
-7250.0
-7350.0
-7450.0
-7550.0
-7650.0
-7750.0
-7850.0
-7950.0
-8050.0
-8150.0
-8250.0
-8350.0
-8450.0
-8550.0
-8650.0
-8750.0
-8850.0
-8950.0
-9050.0
-9150.0
-9250.0
-9350.0
-9450.0
-9550.0
-9650.0
-9750.0
-9850.0
-9950.0
-10050.0
-10150.0
-10250.0
-10350.0
-10450.0
-10550.0
-10650.0
-10750.0
-10850.0
-10950.0
-11050.0
-11150.0
-11250.0
-11350.0
-11450.0
-11550.0
-11650.0
-11750.0
-11850.0
-11950.0
-12050.0
-12150.0
-12250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:40) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<i):
	p=s+x-y
	d=d+1
print(d)
-- OUTPUT:
150
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:51) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<i):
	p=s+x-y
	d=d+1
print(d)
-- OUTPUT:
150
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:11) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<s):
	s=s+x-y
	d=d+1
print(d)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:26) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=1


while(d<s):
	s=s+x-y
	d=d+1
print(d)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:41) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d<s):
	s=s+x-y
	d=d+1
print(d)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:47) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d<s):
	s=s+x-y
	d=d+1
print(d)
-- EXECUTION TIME:
0.168801
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
8
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:54) 
-- CODE:
i=int(input(""))
x=int(input(""))
y=int(input(""))

s=i#acumular
d=0


while(d<s):
	s=s+x-y
	d=d+1
print(d)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
